fixes: main wrapper width stretch

--- a/style.css
+++ b/style.css
@@ -54,7 +54,6 @@
   padding: 0; }
 
 .icd__wrapper {
-  max-width: 1440px;
   margin: 0 auto;
   font-family: 'Space Grotesk', sans-serif;
   height: 100vh;
